--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id='content'></div>
+        <div id='mainContainer'>
+            <div id='content'></div>
+            <button id='reset'>reset</button>
+        </div>
         <script src='script.js'></script>
     </body>
 </html>
