--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id='mainContainer'>
             <div id='content'></div>
             <button id='reset'>reset</button>
+            <button id='newsize'>reset with new size</button>
         </div>
         <script src='script.js'></script>
     </body>
